Fix swagger validation
